--- a/views/partials/tabpane-chats.handlebars
+++ b/views/partials/tabpane-chats.handlebars
@@ -19,7 +19,7 @@
             <div class="item">
                 <a href="#" class="user-status-box">
                     <div class="avatar-xs mx-auto d-block chat-user-img online">
-                        <img src="assets/images/users/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle">
+                        <img src="./assets/images/users/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle">
                         <span class="user-status"></span>
                     </div>
     
@@ -29,7 +29,7 @@
             <div class="item">
                 <a href="#" class="user-status-box">
                     <div class="avatar-xs mx-auto d-block chat-user-img online">
-                        <img src="assets/images/users/avatar-4.jpg" alt="user-img" class="img-fluid rounded-circle">
+                        <img src="./assets/images/users/avatar-4.jpg" alt="user-img" class="img-fluid rounded-circle">
                         <span class="user-status"></span>
                     </div>
     
@@ -40,7 +40,7 @@
             <div class="item">
                 <a href="#" class="user-status-box">
                     <div class="avatar-xs mx-auto d-block chat-user-img online">
-                        <img src="assets/images/users/avatar-5.jpg" alt="user-img" class="img-fluid rounded-circle">
+                        <img src="./assets/images/users/avatar-5.jpg" alt="user-img" class="img-fluid rounded-circle">
                         <span class="user-status"></span>
                     </div>
     
@@ -51,7 +51,7 @@
             <div class="item">
                 <a href="#" class="user-status-box">
                     <div class="avatar-xs mx-auto d-block chat-user-img online">
-                        <img src="assets/images/users/avatar-6.jpg" alt="user-img" class="img-fluid rounded-circle">
+                        <img src="./assets/images/users/avatar-6.jpg" alt="user-img" class="img-fluid rounded-circle">
                         <span class="user-status"></span>
                     </div>
     
@@ -88,7 +88,7 @@
                     <a href="#">
                         <div class="d-flex">                            
                             <div class="chat-user-img online align-self-center me-3 ms-0">
-                                <img src="assets/images/users/avatar-2.jpg" class="rounded-circle avatar-xs" alt="">
+                                <img src="./assets/images/users/avatar-2.jpg" class="rounded-circle avatar-xs" alt="">
                                 <span class="user-status"></span>
                             </div>
                             
@@ -105,7 +105,7 @@
                     <a href="#">
                         <div class="d-flex">
                             <div class="chat-user-img away align-self-center me-3 ms-0">
-                                <img src="assets/images/users/avatar-3.jpg" class="rounded-circle avatar-xs" alt="">
+                                <img src="./assets/images/users/avatar-3.jpg" class="rounded-circle avatar-xs" alt="">
                                 <span class="user-status"></span>
                             </div>
                             <div class="flex-grow-1 overflow-hidden">
@@ -143,7 +143,7 @@
                     <a href="#">
                         <div class="d-flex">
                             <div class="chat-user-img online align-self-center me-3 ms-0">
-                                <img src="assets/images/users/avatar-4.jpg" class="rounded-circle avatar-xs" alt="">
+                                <img src="./assets/images/users/avatar-4.jpg" class="rounded-circle avatar-xs" alt="">
                                 <span class="user-status"></span>
                             </div>
                             <div class="flex-grow-1 overflow-hidden">
@@ -179,7 +179,7 @@
                     <a href="#">                        
                         <div class="d-flex">
                             <div class="chat-user-img away align-self-center me-3 ms-0">
-                                <img src="assets/images/users/avatar-6.jpg" class="rounded-circle avatar-xs" alt="">
+                                <img src="./assets/images/users/avatar-6.jpg" class="rounded-circle avatar-xs" alt="">
                                 <span class="user-status"></span>
                             </div>
                             <div class="flex-grow-1 overflow-hidden">
@@ -237,7 +237,7 @@
                     <a href="#">
                         <div class="d-flex">
                             <div class="chat-user-img away align-self-center me-3 ms-0">
-                                <img src="assets/images/users/avatar-7.jpg" class="rounded-circle avatar-xs" alt="">
+                                <img src="./assets/images/users/avatar-7.jpg" class="rounded-circle avatar-xs" alt="">
                                 <span class="user-status"></span>
                             </div>
                             <div class="flex-grow-1 overflow-hidden">
@@ -271,7 +271,7 @@
                     <a href="#">
                         <div class="d-flex">
                             <div class="chat-user-img away align-self-center me-3 ms-0">
-                                <img src="assets/images/users/avatar-8.jpg" class="rounded-circle avatar-xs" alt="">
+                                <img src="./assets/images/users/avatar-8.jpg" class="rounded-circle avatar-xs" alt="">
                                 <span class="user-status"></span>
                             </div>
                             <div class="flex-grow-1 overflow-hidden">
