--- a/views/partials/tabpane-settings.handlebars
+++ b/views/partials/tabpane-settings.handlebars
@@ -6,7 +6,7 @@
 
     <div class="text-center border-bottom p-4">
         <div class="mb-4 profile-user">
-            <img src="assets/images/users/avatar-1.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="">
+            <img src="./assets/images/users/avatar-1.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="">
             <button type="button" class="btn btn-light bg-light avatar-xs p-0 rounded-circle profile-photo-edit">
                 <i class="ri-pencil-fill"></i>
             </button>
