--- a/views/auth-lock-screen.handlebars
+++ b/views/auth-lock-screen.handlebars
@@ -1,23 +1,23 @@
-@@include("partials/main.html")
+{{> top}}
 
     <head>
         
-        @@include("partials/title-meta.html", {"title": "Lock screen"})
+        {{> title-meta title="Lock screen"}}
 
-        @@include("partials/head-css.html")
+        {{> head-css}}
 
     </head>
 
-    @@include("partials/body.html")
+    {{> body}}
 
         <div class="account-pages my-5 pt-sm-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 col-xl-5">
                         <div class="text-center mb-4">
-                            <a href="index.html" class="auth-logo mb-5 d-block">
-                                <img src="assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
-                                <img src="assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
+                            <a href="/" class="auth-logo mb-5 d-block">
+                                <img src="./assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
+                                <img src="./assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
                             </a>
 
                             <h4>Lock screen</h4>
@@ -29,10 +29,10 @@
                             <div class="card-body p-4">
                                 <div class="p-3">
                                     <div class="user-thumb text-center mb-4">
-                                        <img src="assets/images/users/avatar-1.jpg" class="rounded-circle img-thumbnail avatar-lg" alt="thumbnail">
+                                        <img src="./assets/images/users/avatar-1.jpg" class="rounded-circle img-thumbnail avatar-lg" alt="thumbnail">
                                         <h5 class="font-size-15 mt-3">Patricia Smith</h5>
                                     </div>
-                                    <form action="index.html">
+                                    <form action="/">
                                         <div class="mb-4">
                                             <label class="form-label">Password</label>
                                             <div class="input-group bg-light-subtle rounded-3 mb-3">
@@ -53,7 +53,7 @@
                         </div>
 
                         <div class="mt-5 text-center">
-                            <p>Not you ? return <a href="auth-login.html" class="fw-medium text-primary"> Signin </a> </p>
+                            <p>Not you ? return <a href="/auth-login" class="fw-medium text-primary"> Signin </a> </p>
                             <p>© <script>document.write(new Date().getFullYear())</script> Chatvia. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
                         </div>
                     </div>
@@ -62,10 +62,9 @@
         </div>
         <!-- end account-pages -->
 
+        {{> vendor-scripts}}
 
-        @@include("partials/vendor-scripts.html")
-
-        <script src="assets/js/app.js"></script>
+        <script src="./assets/js/app.js"></script>
 
     </body>
 </html>
