--- a/views/auth-login.handlebars
+++ b/views/auth-login.handlebars
@@ -1,23 +1,23 @@
-@@include("partials/main.html")
+{{> top}}
 
     <head>
         
-        @@include("partials/title-meta.html", {"title": "Log in"})
+        {{> title-meta title="Log in"}}
 
-        @@include("partials/head-css.html")
+        {{> head-css}}
 
     </head>
 
-    @@include("partials/body.html")
+    {{> body}}
 
         <div class="account-pages my-5 pt-sm-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 col-xl-5">
                         <div class="text-center mb-4">
-                            <a href="index.html" class="auth-logo mb-5 d-block">
-                                <img src="assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
-                                <img src="assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
+                            <a href="/" class="auth-logo mb-5 d-block">
+                                <img src="./assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
+                                <img src="./assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
                             </a>
 
                             <h4>Sign in</h4>
@@ -28,7 +28,7 @@
                         <div class="card">
                             <div class="card-body p-4">
                                 <div class="p-3">
-                                    <form action="index.html">
+                                    <form action="/">
     
                                         <div class="mb-3">
                                             <label class="form-label">Username</label>
@@ -42,7 +42,7 @@
 
                                         <div class="mb-4">
                                             <div class="float-end">
-                                                <a href="auth-recoverpw.html" class="text-muted font-size-13">Forgot password?</a>
+                                                <a href="/auth-recoverpw" class="text-muted font-size-13">Forgot password?</a>
                                             </div>
                                             <label class="form-label">Password</label>
                                             <div class="input-group mb-3 bg-light-subtle rounded-3">
@@ -69,7 +69,7 @@
                         </div>
 
                         <div class="mt-5 text-center">
-                            <p>Don't have an account ? <a href="auth-register.html" class="fw-medium text-primary"> Signup now </a> </p>
+                            <p>Don't have an account ? <a href="/auth-register" class="fw-medium text-primary"> Signup now </a> </p>
                             <p>© <script>document.write(new Date().getFullYear())</script> Chatvia. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
                         </div>
                     </div>
@@ -77,11 +77,9 @@
             </div>
         </div>
         <!-- end account-pages -->
+        {{> vendor-scripts}}
 
-
-        @@include("partials/vendor-scripts.html")
-
-        <script src="assets/js/app.js"></script>
+        <script src="./assets/js/app.js"></script>
 
     </body>
 </html>
