--- a/views/auth-recoverpw.handlebars
+++ b/views/auth-recoverpw.handlebars
@@ -1,23 +1,23 @@
-@@include("partials/main.html")
+{{> top}}
 
     <head>
-        
-        @@include("partials/title-meta.html", {"title": "Reset Password"})
 
-        @@include("partials/head-css.html")
+        {{> title-meta title="Reset Password"}}
+
+        {{> head-css}}
 
     </head>
 
-    @@include("partials/body.html")
+    {{> body}}
 
         <div class="account-pages my-5 pt-sm-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 col-xl-5">
                         <div class="text-center mb-4">
-                            <a href="index.html" class="auth-logo mb-5 d-block">
-                                <img src="assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
-                                <img src="assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
+                            <a href="/" class="auth-logo mb-5 d-block">
+                                <img src="./assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
+                                <img src="./assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
                             </a>
 
                             <h4>Reset Password</h4>
@@ -31,7 +31,7 @@
                                     <div class="alert alert-success text-center mb-4" role="alert">
                                         Enter your Email and instructions will be sent to you!
                                     </div>
-                                    <form action="index.html">
+                                    <form action="/">
     
                                         <div class="mb-4">
                                             <label class="form-label">Email</label>
@@ -53,7 +53,7 @@
                         </div>
 
                         <div class="mt-5 text-center">
-                            <p>Remember It ? <a href="auth-login.html" class="fw-medium text-primary"> Signin </a> </p>
+                            <p>Remember It ? <a href="/auth-login" class="fw-medium text-primary"> Signin </a> </p>
                             <p>© <script>document.write(new Date().getFullYear())</script> Chatvia. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
                         </div>
                     </div>
@@ -62,10 +62,9 @@
         </div>
         <!-- end account-pages -->
 
+        {{> vendor-scripts}}
 
-        @@include("partials/vendor-scripts.html")
-
-        <script src="assets/js/app.js"></script>
+        <script src="./assets/js/app.js"></script>
 
     </body>
 </html>
