--- a/views/partials/tabpane-profile.handlebars
+++ b/views/partials/tabpane-profile.handlebars
@@ -19,7 +19,7 @@
 
     <div class="text-center p-4 border-bottom">
         <div class="mb-4">
-            <img src="assets/images/users/avatar-1.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="">
+            <img src="./assets/images/users/avatar-1.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="">
         </div>
 
         <h5 class="font-size-16 mb-1 text-truncate">Patricia Smith</h5>
