--- a/views/partials/user-profile-details.handlebars
+++ b/views/partials/user-profile-details.handlebars
@@ -9,7 +9,7 @@
 
     <div class="text-center p-4 border-bottom">
         <div class="mb-4">
-            <img src="assets/images/users/avatar-4.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="">
+            <img src="./assets/images/users/avatar-4.jpg" class="rounded-circle avatar-lg img-thumbnail" alt="">
         </div>
 
         <h5 class="font-size-16 mb-1 text-truncate">Doris Brown</h5>
