--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -5,19 +5,19 @@
         {{> title-meta}}
 
         <!-- magnific-popup css -->
-        <link href="../public/assets/libs/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
+        <link href="./assets/libs/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
 
         <!-- owl.carousel css -->
-        <link rel="stylesheet" href="../public/assets/libs/owl.carousel/../public/assets/owl.carousel.min.css">
+        <link rel="stylesheet" href="./assets/libs/owl.carousel/./assets/owl.carousel.min.css">
 
-        <link rel="stylesheet" href="../public/assets/libs/owl.carousel/../public/assets/owl.theme.default.min.css">
+        <link rel="stylesheet" href="./assets/libs/owl.carousel/./assets/owl.theme.default.min.css">
 
         {{> head-css}}
 
     </head>
 
     {{> body}}
-
+    
         <div class="layout-wrapper d-lg-flex">
 
             <!-- Start left sidebar-menu -->
@@ -77,7 +77,7 @@
                                             <a href="javascript: void(0);" class="user-chat-remove text-muted font-size-16 p-2"><i class="ri-arrow-left-s-line"></i></a>
                                         </div>
                                         <div class="me-3 ms-0">
-                                            <img src="../public/assets/images/users/avatar-4.jpg" class="rounded-circle avatar-xs" alt="">
+                                            <img src="./assets/images/users/avatar-4.jpg" class="rounded-circle avatar-xs" alt="">
                                         </div>
                                         <div class="flex-grow-1 overflow-hidden">
                                             <h5 class="font-size-16 mb-0 text-truncate"><a href="#" class="text-reset user-profile-show">Doris Brown</a> <i class="ri-record-circle-fill font-size-10 text-success d-inline-block ms-1"></i></h5>
@@ -144,7 +144,7 @@
                                 <li>
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-4.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-4.jpg" alt="">
                                         </div>
     
                                         <div class="user-chat-content">
@@ -175,7 +175,7 @@
                                 <li class="right">
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-1.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-1.jpg" alt="">
                                         </div>
     
                                         <div class="user-chat-content">
@@ -214,7 +214,7 @@
                                 <li>
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-4.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-4.jpg" alt="">
                                         </div>
     
                                         <div class="user-chat-content">
@@ -268,7 +268,7 @@
                                 <li class="right">
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-1.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-1.jpg" alt="">
                                         </div>
     
                                         <div class="user-chat-content">
@@ -301,7 +301,7 @@
                                 <li>
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-4.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-4.jpg" alt="">
                                         </div>
     
                                         <div class="user-chat-content">
@@ -311,14 +311,14 @@
                                                     <ul class="list-inline message-img  mb-0">
                                                         <li class="list-inline-item message-img-list me-2 ms-0">
                                                             <div>
-                                                                <a class="popup-img d-inline-block m-1" href="../public/assets/images/small/img-1.jpg" title="Project 1">
-                                                                    <img src="../public/assets/images/small/img-1.jpg" alt="" class="rounded border">
+                                                                <a class="popup-img d-inline-block m-1" href="./assets/images/small/img-1.jpg" title="Project 1">
+                                                                    <img src="./assets/images/small/img-1.jpg" alt="" class="rounded border">
                                                                 </a>
                                                             </div>
                                                             <div class="message-img-link">
                                                                 <ul class="list-inline mb-0">
                                                                     <li class="list-inline-item">
-                                                                        <a download="img-1.jpg" href="../public/assets/images/small/img-1.jpg" class="fw-medium">
+                                                                        <a download="img-1.jpg" href="./assets/images/small/img-1.jpg" class="fw-medium">
                                                                             <i class="ri-download-2-line"></i>
                                                                         </a>
                                                                     </li>
@@ -339,14 +339,14 @@
 
                                                         <li class="list-inline-item message-img-list">
                                                             <div>
-                                                                <a class="popup-img d-inline-block m-1" href="../public/assets/images/small/img-2.jpg" title="Project 2">
-                                                                    <img src="../public/assets/images/small/img-2.jpg" alt="" class="rounded border">
+                                                                <a class="popup-img d-inline-block m-1" href="./assets/images/small/img-2.jpg" title="Project 2">
+                                                                    <img src="./assets/images/small/img-2.jpg" alt="" class="rounded border">
                                                                 </a>
                                                             </div>
                                                             <div class="message-img-link">
                                                                 <ul class="list-inline mb-0">
                                                                     <li class="list-inline-item">
-                                                                        <a download="img-2.jpg" href="../public/assets/images/small/img-2.jpg" class="fw-medium">
+                                                                        <a download="img-2.jpg" href="./assets/images/small/img-2.jpg" class="fw-medium">
                                                                             <i class="ri-download-2-line"></i>
                                                                         </a>                                                                        
                                                                     </li>
@@ -391,7 +391,7 @@
                                 <li class="right">
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-1.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-1.jpg" alt="">
                                         </div>
     
                                         <div class="user-chat-content">
@@ -414,7 +414,7 @@
                                                             <div class="ms-4 me-0">
                                                                 <div class="d-flex gap-2 font-size-20 d-flex align-items-start">
                                                                     <div>
-                                                                        <a download="admin_v1.0.zip" href="../public/assets/images/small/admin_v1.0.zip" class="fw-medium">
+                                                                        <a download="admin_v1.0.zip" href="./assets/images/small/admin_v1.0.zip" class="fw-medium">
                                                                             <i class="ri-download-2-line"></i>
                                                                         </a> 
                                                                     </div>
@@ -458,7 +458,7 @@
                                 <li>
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="../public/assets/images/users/avatar-4.jpg" alt="">
+                                            <img src="./assets/images/users/avatar-4.jpg" alt="">
                                         </div>
                                         
                                         <div class="user-chat-content">
@@ -535,7 +535,7 @@
                         <div class="modal-body">
                             <div class="text-center p-4">
                                 <div class="avatar-lg mx-auto mb-4">
-                                    <img src="../public/assets/images/users/avatar-4.jpg" alt="" class="img-thumbnail rounded-circle">
+                                    <img src="./assets/images/users/avatar-4.jpg" alt="" class="img-thumbnail rounded-circle">
                                 </div>
 
                                 <h5 class="text-truncate">Doris Brown</h5>
@@ -573,7 +573,7 @@
                         <div class="modal-body">
                             <div class="text-center p-4">
                                 <div class="avatar-lg mx-auto mb-4">
-                                    <img src="../public/assets/images/users/avatar-4.jpg" alt="" class="img-thumbnail rounded-circle">
+                                    <img src="./assets/images/users/avatar-4.jpg" alt="" class="img-thumbnail rounded-circle">
                                 </div>
 
                                 <h5 class="text-truncate">Doris Brown</h5>
@@ -608,15 +608,15 @@
         {{> vendor-scripts}}
 
         <!-- Magnific Popup-->
-        <script src="../public/assets/libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+        <script src="./assets/libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 
         <!-- owl.carousel js -->
-        <script src="../public/assets/libs/owl.carousel/owl.carousel.min.js"></script>
+        <script src="./assets/libs/owl.carousel/owl.carousel.min.js"></script>
 
         <!-- page init -->
-        <script src="../public/assets/js/pages/index.init.js"></script>
+        <script src="./assets/js/pages/index.init.js"></script>
 
-        <script src="../public/assets/js/app.js"></script>
+        <script src="./assets/js/app.js"></script>
 
     </body>
 </html>
